syntax = "proto3";

option java_package = "com.fwe.flyingwhiteelephant.service.consent.raft.protocol";
option java_outer_classname = "Raft";

service Consent {
  rpc handleRequestVote (VoteRequest) returns (VoteResponse);
  rpc handleAppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc handleHeartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}

message VoteRequest {
  uint32 term = 1;
  int64 candidateId = 2;
  int64 lastLogHeight = 3;
}

message VoteResponse {
  uint32 status = 1;
}

message AppendEntriesRequest {
  uint32 term = 1;
  int64 leaderId = 2;
  repeated LogEntry entries = 3;
}

message LogEntry {
  uint64 index = 1;
  uint32 term = 2;
  string command = 3;
}

message AppendEntriesResponse {
  uint32 status = 1;
}

message HeartbeatRequest {
  uint32 term = 1;
  int64 leaderId = 2;
  int64 latestBlockHeight = 3;
}

message HeartbeatResponse {
  uint32 status = 1;
}